<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_Profile"
                android:icon="@drawable/profile"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_baseline_search_24"
                android:title="GTV Report" />

            <item
                android:id="@+id/nav_Logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/aboutapp" />

        </menu>
    </item>

</menu>
