<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/text"
        android:visibility="gone"
        android:text="@string/EnterMobileNo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/mystyles"
        android:textSize="@dimen/regularsize"
        android:id="@id/txtmobileno"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="10"
        android:hint="@string/mobile"
        />


     <EditText
         android:id="@+id/txtname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:background="@drawable/mystyles"
         android:hint="Farmer Name"
         android:imeOptions="actionUnspecified"
         android:maxLines="1"
         android:inputType="text"
         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
         android:singleLine="true"
         android:textSize="15sp" />

     <EditText
         android:id="@+id/txtAadhar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:background="@drawable/mystyles"
         android:digits="0123456789"
         android:hint="Aadhar Number"
         android:imeOptions="actionUnspecified"
         android:inputType="number"
         android:maxLength="12"
         android:maxLines="1"
         android:singleLine="true"
         android:textSize="15sp" />
         <Spinner
             android:id="@+id/spState"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/spinner"
             android:layout_marginTop="6dp"
             android:textSize="15sp"

             />
      <Spinner
         android:id="@+id/spDist"
         android:layout_width="match_parent"
          android:layout_height="40dp"
         android:background="@drawable/spinner"
         android:layout_marginTop="6dp"
          android:textSize="15sp"

          />
      <Spinner
         android:id="@+id/spTaluka"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="6dp"
          android:textSize="15sp"
          android:background="@drawable/spinner"

          />
      <Spinner
         android:id="@+id/spVillage"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/spinner"
         android:layout_marginTop="6dp"
         android:textSize="15sp"
         />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myRadioGroup"
        android:layout_marginTop="20dp"
        android:id="@+id/btnnext"
        android:textColor="@color/Whitecl"
        android:background="@color/draklightgreen"
        android:text="@string/next" />
 </LinearLayout>
</RelativeLayout>