<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"   android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="User Profile "
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>




    <!-- Scrollable Content below header and above footer -->
    <ScrollView
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"


        android:layout_below="@id/header" >

        <LinearLayout
            android:id="@+id/linear_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:visibility="gone"

                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/profile"
                        >

                    </ImageView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"

                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:id="@+id/ivImage"
                        android:src="@drawable/profile"
                        >

                    </ImageView>
                    <Button
                        android:id="@+id/btnTakephoto"
                        android:layout_width="120dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:text="Take Photo"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/rbutton"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/text"
                        android:visibility="gone"
                        android:text="@string/EnterMobileNo" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/mystyles"
                        android:textSize="@dimen/regularsize"
                        android:id="@id/txtmobileno"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:maxLength="10"
                        android:hint="@string/mobile"
                        android:enabled="false"
                        />


                    <EditText
                        android:id="@+id/txtname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/mystyles"
                        android:hint="Farmer Name"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/txtAadhar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/mystyles"
                        android:digits="0123456789"
                        android:hint="Aadhar Number"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="15sp" />
                    <Spinner
                        android:id="@+id/spState"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/spinner"
                        android:spinnerMode="dropdown"
                        android:prompt="@string/spinner_Lang"
                        android:layout_marginTop="6dp"
                        android:textSize="15sp"

                        />
                    <Spinner
                        android:id="@+id/spDist"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/spinner"
                        android:spinnerMode="dropdown"
                        android:prompt="@string/spinner_Lang"
                        android:layout_marginTop="6dp"
                        android:textSize="15sp"
                        />
                    <Spinner
                        android:id="@+id/spTaluka"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/spinner"
                        android:spinnerMode="dropdown"
                        android:prompt="@string/spinner_Lang"
                        android:layout_marginTop="6dp"
                        android:textSize="15sp"
                        />
                    <Spinner
                        android:id="@+id/spVillage"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/spinner"
                        android:spinnerMode="dropdown"
                        android:prompt="@string/spinner_Lang"
                        android:layout_marginTop="6dp"
                        android:textSize="15sp"
                        />



                    <Spinner
                        android:id="@+id/spnlanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner"
                        android:spinnerMode="dropdown"
                        android:prompt="@string/spinner_Lang"
                        android:layout_marginTop="6dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >



                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:text="Update Profile"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/rbutton"
                        />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
